--- a/dr_death_report.ipynb
+++ b/dr_death_report.ipynb
@@ -19,6 +19,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81191df6-29fb-44d2-8abf-7f6d1604b5a5",
+   "metadata": {},
+   "source": [
+    "##  1. Un ciblage opportuniste et méthodique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13e9f7c5-5c03-476e-ab45-491ec0dd7697",
    "metadata": {},
    "source": [
@@ -33,8 +41,6 @@
    "id": "80bc63ea-5a6d-4095-adce-247c2121bf37",
    "metadata": {},
    "source": [
-    "##  1. Un ciblage opportuniste et méthodique\n",
-    "\n",
     "L'analyse croisée du graphique sur le genre et l'âge des victimes avec les données démographiques et juridiques britanniques révèle un schéma de prédation précis : Harold Shipman ciblait en priorité des femmes âgées, veuves ou proches de l'être. Cela s'explique par plusieurs facteurs :\n",
     "\n",
     "- En Angleterre, 70 % des femmes survivent à leur conjoint, ce qui les rend souvent seules et vulnérables.\n",
@@ -42,6 +48,14 @@
     "- En droit anglais, l'héritage revient au dernier survivant du couple, ce qui peut motiver la falsification de testaments.\n",
     "\n",
     "Shipman exploitait ainsi une population isolée, peu contestataire et souvent sans témoin direct, maximisant ses chances d'agir sans éveiller de soupçon.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e32d02b6-1743-4ebe-9121-fd89e9e2a468",
+   "metadata": {},
+   "source": [
+    "##  2. Un mode opératoire calé sur le rythme d'un professionnel \"ordinaire\""
    ]
   },
   {
@@ -57,8 +71,6 @@
    "id": "0ba513af-c64d-4122-9adc-2258aff7ac6b",
    "metadata": {},
    "source": [
-    "##  2. Un mode opératoire calé sur le rythme d'un professionnel \"ordinaire\"\n",
-    "\n",
     "Le graphique sur la répartition hebdomadaire des meurtres montre une concentration nette des décès entre le lundi et le vendredi (plus de 90 % des cas), avec une chute drastique le week-end (à peine 8,8 % les samedi et dimanche cumulés).  \n",
     "Ce schéma suggère une logique organisationnelle claire :\n",
     "\n",
@@ -70,22 +82,28 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "952a247e-a8ee-41f5-bf31-541723ecfac0",
+   "id": "1da92a55-23a3-469a-855c-c41c09037064",
    "metadata": {},
    "source": [
-    "![image.png](compare_doc.png)"
+    "##  3. Une prédation horaire ciblant les moments de vulnérabilité maximale"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5e7e9315-054b-45bc-9d3e-340b34b96581",
+   "id": "d6d4cd24-9577-446c-8ddc-1d5dc41ba6d2",
    "metadata": {},
    "source": [
-    "##  3. Une prédation horaire ciblant les moments de vulnérabilité maximale\n",
-    "\n",
-    "L'analyse de la distribution horaire des décès révèle un pic saisissant entre 14h et 17h, avec un maximum vers 15h, en contraste net avec la répartition équilibrée des décès naturels. Cette concentration temporelle s'explique par plusieurs facteurs stratégiques :\n",
+    "![Dashboard](compare_doc.png)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1e779e6a-a2b7-409a-baf5-c0a62190f820",
+   "metadata": {},
+   "source": [
+    "L'analyse de la distribution horaire des décès révèle un pic saisissant entre 13h et 16h, avec un maximum vers 15h, en contraste net avec la répartition équilibrée des décès naturels. Cette concentration temporelle s'explique par plusieurs facteurs stratégiques :\n",
     "\n",
     "- Shipman alignait ses meurtres sur ses visites à domicile de l'après-midi, après ses consultations matinales en cabinet, créant ainsi une fenêtre d'action prévisible et sécurisée.\n",
     "- Cette plage horaire offrait une conjonction optimale d'isolement des victimes, souvent des femmes âgées seules à leur domicile à ce moment précis de la journée.\n",
@@ -93,6 +111,14 @@
     "\n",
     "Ce schéma temporel lui permettait d'intercaler ses meurtres entre des visites légitimes, normalisant ainsi ces événements dans sa routine professionnelle.  \n",
     "Cette signature statistique, identifiée plus tard par le professeur David Spiegelhalter, démontre à quel point Shipman avait méthodiquement intégré ses actes criminels à une pratique médicale en apparence irréprochable. L'heure des décès constitue ainsi un \"marqueur comportemental\" révélateur, qui aurait pu — selon les experts — permettre sa détection dès 1996, évitant potentiellement des dizaines de victimes supplémentaires.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf1c0af-31b3-4719-b99b-74382cedd212",
+   "metadata": {},
+   "source": [
+    "##  4. Une fluctuation révélatrice : l'impact des plaintes et de l'installation en cabinet indépendant"
    ]
   },
   {
@@ -107,10 +133,10 @@
   {
    "cell_type": "markdown",
    "id": "7487a1ed-1bb2-4e9d-bd45-42b42f577423",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "##  4. Une fluctuation révélatrice : l'impact des plaintes et de l'installation en cabinet indépendant\n",
-    "\n",
     "L'analyse du graphique de distribution annuelle des meurtres révèle une anomalie significative : un net ralentissement de l'activité criminelle entre 1990 et 1992. Cette période coïncide précisément avec deux événements majeurs :\n",
     "\n",
     "- Des plaintes formelles déposées par des patients auprès de l'autorité sanitaire locale de Donneybrook en 1990 et 1992, suggérant une période de surveillance accrue.\n",
